<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <view
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/editDistance"
        style="@style/mCustomEditTexto"
        android:hint="@string/Distancia" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/total_de_km"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/editPrice"
        android:hint="@string/Preco"
        style="@style/mCustomEditTexto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/pre_o_por_litro"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp"/>

    <EditText
        android:id="@+id/editAutonomy"
        android:hint="@string/Autonomia"
        style="@style/mCustomEditTexto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/km_por_litros"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:text="Seu gasto total será de :"
        android:textAllCaps="true"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/red_result"
        android:textSize="35sp"
        android:text="@string/rs_0_00" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textColor="@color/colorLigthGray"
        android:padding="20dp"
        android:background="@drawable/roud_btn"
        android:text="@string/calcular" />

</LinearLayout>